MIR-146 fixed minor layout bugs
git-svn-id: https://server.mycore.de/svn/maven/mir/trunk@32302 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mir-layout/src/main/less/common/forms.less
+++ b/mir-layout/src/main/less/common/forms.less
@@ -18,6 +18,8 @@
 
 .form-pmud .btn {
   margin-right: 3px;
+  margin-top: 2px;
+  padding: 8px 12px;
 }
 
 .navbar-left > .btn {
@@ -39,6 +41,8 @@
   background-color: #ECF0F1;
   border: 1px solid #DCE4EC;
   border-radius: 4px;
+  padding: 8px 16px;
+  margin-top: 2px;
 }
 
 #titles_thesis, #titles_thesis_translated {
